added a load only when convert is sucessfull

--- a/aws_node/public/sucess.html
+++ b/aws_node/public/sucess.html
@@ -34,10 +34,10 @@
             <div class="jumbotron mt-4">
                 <div class="mx-auto" style="width: 20rem;">
                     <div>
-                        <h1>Request was sucessfully sent!</h1>
+                        <h1>Request was sucessfull!</h1>
                     </div>
                     <div>
-                        <p>Your request was send to the converter node.</p>
+                        <p>Your converted files has been uploaded.</p>
                     </div>
                 </div>
             </div>
@@ -48,8 +48,7 @@
 
                 <div class="col-sm-4 mb-3">
                     <h2>Further steps:</h2>
-                    <p> The requested conversion was queued to a convert-node.
-                        After the conversion the file will be uploaded under the specified filename and can be downloaded on the "File" page.
+                    <p> The converted file can be downloaded on the files page.
                     </p>
                 </div>
 
