sending error responses

--- a/aws_node/public/index.html
+++ b/aws_node/public/index.html
@@ -189,6 +189,13 @@
                         document.getElementById("hidden_filename").value = fileName;
                         document.getElementById("convertForm").submit(function(eventObj) {
                             return true;
+                            document.getElementById('convertForm').innerHTML = 
+                            `
+                            <div class="spinner-border" role="status">
+                            <span class="sr-only">Loading...</span>
+                            </div>
+                            `
+
                         });
                         
                     });
