--- a/aws_node/public/index.html
+++ b/aws_node/public/index.html
@@ -113,6 +113,7 @@
                                                             <option id=""> </option>
                                                             <option id="bt709">bt709</option>
                                                             <option id="bt2020">bt2020</option>
+                                                            <option value="bt601-6-525">bt601</option>
                                                         </select>
                                                     </div>
                                                 </div>
@@ -213,13 +214,14 @@
                     const url = getData(`/get-object-url/${fileName}`, (url) => {
                         document.getElementById("hidden_url").value = url;
                         document.getElementById("hidden_filename").value = fileName;
-                        document.getElementById('welcome').innerHTML = "Request in send!";
+                        document.getElementById('welcome').innerHTML = "Request send!";
                         window.scrollTo(0, 0);
                         document.getElementById('forUser').innerHTML = 
                             `
                             <div class="spinner-border m-3 d-flex justify-content-center" style="width: 5rem; height: 5rem;" role="status">
                             <span class="sr-only">Loading...</span>
                             </div>
+                            <button type="button" class="btn btn-outline-dark btn-sm" onclick="location.href='/';">Next Request</button>
                             `
                         document.getElementById("convertForm").submit(function(eventObj) {
                             return true;
