--- a/aws_node/public/files.html
+++ b/aws_node/public/files.html
@@ -109,7 +109,7 @@
                             return `
                             <div class="mb-3 card " onclick="downloadFile(${index})">
                                         <div class="card-header">
-                                            <h4 class="card-title">${item.key}</h4> 
+                                            <b class="card-title">${item.key}</b> 
                                         </div>
                                         <div class="card-body">
                                             File Size: ${item.size} 
@@ -134,7 +134,7 @@
                             return `
                             <div class="mb-3 card" onclick="deleteFile(${index})">
                                         <div class="card-header">
-                                            <h4 class="card-title">${item.key}</h4> 
+                                            <b class="card-title">${item.key}</b> 
                                         </div>
                                         <div class="card-body">
                                             File Size: ${item.size} 
