added approval for delete & improved logging

--- a/aws_node/public/files.html
+++ b/aws_node/public/files.html
@@ -162,9 +162,11 @@
                 async function deleteFile(index) {
                 const fileName = (list[index] || {}).key;
                 document.getElementById("hidden_filename").value = fileName;
+                if (confirm(`Do you really want to delete ${fileName}?`)) {
                 document.getElementById("deleteForm").submit(function(eventObj) {
                     return true;
                 });
+                } else return false;
                 }
 
 
