cleaned & commented code & added some blue

--- a/aws_node/public/about.html
+++ b/aws_node/public/about.html
@@ -29,7 +29,7 @@
           
 
         <div class="container">
-            <div class="jumbotron mt-4">
+            <div style="background:#2a6bb7; color: white !important" class="jumbotron mt-4">
                 <div class="mx-auto" style="width: 20rem;">
                     <div>
                         <h1>About</h1>
