--- a/aws_node/public/files.html
+++ b/aws_node/public/files.html
@@ -80,6 +80,8 @@
 
             <script>
                 let list = [];
+
+                //sends a post Request endpoint, to upload a new file to S3
                 function saveFile(event) {
                     const xhr = new XMLHttpRequest();
                     const formData = new FormData();
@@ -158,10 +160,11 @@
                     console.log(url);
                 });
             }
-
+                //Delete the clicked File from S3
                 async function deleteFile(index) {
                 const fileName = (list[index] || {}).key;
                 document.getElementById("hidden_filename").value = fileName;
+                //Alert, to confirm the deletation 
                 if (confirm(`Do you really want to delete ${fileName}?`)) {
                 document.getElementById("deleteForm").submit(function(eventObj) {
                     return true;
