--- a/express_api/index.html
+++ b/express_api/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
+<!-- Page only used for uptime monitoring -->
   
 <head>
     <meta charset="utf-8">
