--- a/aws_node/public/index.html
+++ b/aws_node/public/index.html
@@ -2,13 +2,20 @@
 
     <head>
         <title>Convert Media S3</title>
+        <!-- not jet working -->
+        <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
+
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'>
+        <link rel="stylesheet" type="text/css" href="/CSS/main.css">
+
         <style>
-            .card {
-                display: inline-block;
-            }
+
         </style>
+
+    
+
     </head>
 
     <body onload="loadData()">
@@ -44,7 +51,7 @@
 
             <div class="p-4">           
                               
-                        <form class="" id="convertForm" action="/parameters" method="post">
+                        <form class="px-4 py-3" id="convertForm" action="/parameters" method="post">
 
                                 <div class="mb-3">
 
@@ -191,7 +198,9 @@
 
                                                     </div>
                                                 </div>
+                                            </div>
 
+                                            <div class="form-row">
                                                 <div class="col mb-3">
                                                     <div class="colourspace collapse">
                                                         <label for="transfer" class="control-label">Transfer charakteristiks:</label>
