consolidated css files

--- a/aws_node/public/about.html
+++ b/aws_node/public/about.html
@@ -3,10 +3,10 @@
 
     <head>
 
-        <title>Convert Media S3</title>
+        <title>Media Cloud Encoder</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+        <link rel="stylesheet" type="text/css" href="/CSS/main.css">
     </head>
 
 
@@ -29,7 +29,7 @@
           
 
         <div class="container">
-            <div style="background:#2a6bb7; color: white !important" class="jumbotron mt-4">
+            <div class="jumbotron mt-4">
                 <div class="mx-auto" style="width: 20rem;">
                     <div>
                         <h1>About</h1>
@@ -40,26 +40,19 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row text-board">
 
-                <div class="col-sm-2" ></div>
-
-                <div class="col-sm-4 mb-3">
+                <div class="p-4">
                     <h2>Usage</h2>
-                    <p> The content uploaded on the files page can be encoded on the convert page. 
+                    <p style="text-align:justify"> The content uploaded on the files page can be encoded on the convert page. 
                         Therefore the convert parameters can be specified at the left of the convert page.
                         The paramters are then applied by clicking one of the files stored in the S3 bucket.    
                     </p>
                 </div>
 
-                <div class="col-sm-4">
-
-
-                </div>
-                </div>
-
-                <div class="col-sm-2" ></div>
             </div>
+
+        </div>
 
             <!-- Bootstrap scripts -->
 
