added symbols and refresh to uploads of files - still in test

--- a/aws_node/public/index.html
+++ b/aws_node/public/index.html
@@ -347,14 +347,14 @@
                         if (item.key==="Error"){  
                             return `
                             <div class="card mb-3" title="S3 Error">
-                            <div class="card-header allert">
+                            <div class="card-header alert">
                                             <b class="card-title">S3 Error</b> 
                                         </div>
                                         <div class="card-body" >
-                                            when loading S3 content 
+                                            when loading files 
                                             <br>
                                             <br>
-                                            check your credentials
+                                            please check credentials
                                         </div>
                             </div>
                             
