--- a/aws_node/public/index.html
+++ b/aws_node/public/index.html
@@ -347,7 +347,7 @@
                         if (item.key==="Error"){  
                             return `
                             <div class="card mb-3" title="S3 Error">
-                            <div class="card-header alert">
+                            <div class="card-header allert">
                                             <b class="card-title">S3 Error</b> 
                                         </div>
                                         <div class="card-body" >
