draw out some functions, to make the code cleaner

--- a/aws_node/public/about.html
+++ b/aws_node/public/about.html
@@ -45,9 +45,9 @@
 
                 <div class="p-4">
                     <h2>Usage</h2>
-                    <p style="text-align:justify"> The content uploaded on the files page can be encoded on the convert page. 
-                        Therefore the convert parameters can be specified at the left of the convert page.
-                        The paramters are then applied by clicking one of the files stored in the S3 bucket.    
+                    <p style="text-align:justify"> The content uploaded on the files page can be encoded on the conversion page.
+                        Therefore, the conversion parameters can be specified on the left of the convert page.
+                        The parameters are then applied by clicking one of the files stored in the S3 bucket.    
                     </p>
                 </div>
 
