--- a/aws_node/public/about.html
+++ b/aws_node/public/about.html
@@ -9,23 +9,21 @@
         <link rel="stylesheet" type="text/css" href="/CSS/main.css">
     </head>
 
-
-
+    <!-- Pageheader - nav menu -->
     <body onload="loadData()">
-
         <nav class="navbar navbar-expand-lg navbar-light bg-light">            
             <a class="navbar-brand" href="/">
                 <img src="/favicon.ico" width="30" height="30" class="d-inline-block align-top" alt="">
                 Convert
             </a>
-              <ul class="navbar-nav">
+            <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="/files">File Management <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/files">File Management <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/about">About</a>
+                    <a class="nav-link" href="/about">About</a>
                 </li>
-              </ul>
+            </ul>
         </nav>
           
 
@@ -42,21 +40,17 @@
             </div>
 
             <div class="row text-board">
-
                 <div class="p-4">
                     <h2>Usage</h2>
                     <p style="text-align:justify"> The content uploaded on the files page can be encoded on the conversion page.
-                        Therefore, the conversion parameters can be specified on the left of the convert page.
+                        +Therefore, the conversion parameters can be specified on the left of the convert page.
                         The parameters are then applied by clicking one of the files stored in the S3 bucket.    
                     </p>
                 </div>
-
             </div>
-
         </div>
 
             <!-- Bootstrap scripts -->
-
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
