--- a/aws_node/public/files.html
+++ b/aws_node/public/files.html
@@ -14,7 +14,7 @@
 
     <body onload="loadData()">
 
-        <!-- Pageheader - Navmenü -->
+        <!-- Pageheader - nav menu -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="/">
                 <img src="/favicon.ico" width="30" height="30" class="d-inline-block align-top" alt="">
@@ -54,7 +54,7 @@
                         <div class="row"></div>
                         <div id="waiter" class="col-sm-7"></div>
 
-                            <!-- Upload Button -->
+                        <!-- Upload Button -->
                         <label class="col-sm-4 custom-file-upload">
                             <input  type="file" id="s3-file" onchange="saveFile(this)"/>
                             Upload File
@@ -65,6 +65,7 @@
                 <div class="col-sm-1"></div>
             </div>
 
+            <!-- dlete Section -->
             <form id="deleteForm" class="px-4 py-3" action="/delete-from-s3" method="post">
                 <div class="mb-3">
                     <h2>Download Files</h2>
@@ -98,22 +99,21 @@
                     }
                 };
 
-                xhr.onreadystatechange = state => {
-                }
-
+                xhr.onreadystatechange = state => {}
                 xhr.timeout = 10000;
                 xhr.open('POST', '/upload-to-s3');
-                xhr.send(formData)
+                xhr.send(formData);
                 document.getElementById('waiter').innerHTML = `
                     <div class="spinner-border m-3 d-flex justify-content-center" style="width: 3rem; height: 3rem;" role="status">
                     <span style="background:#2a6bb7; color: white !important"  class="sr-only">Loading...</span>
                     </div>
                 `;
             }
-
+            /* function launched when site is loaded */
             function loadData() {
-
+                /* send get request to list content of S3 */
                 getData('/all-files', "GET" , (data = []) => {
+                    /* render cards in call backa */
                     listAll(data,"downloadFile","bucket-data-list");
                     listAll(data,"deleteFile","bucket-data-list-delete");
                 });
