--- a/aws_node/public/sucess.html
+++ b/aws_node/public/sucess.html
@@ -1,21 +1,19 @@
 
 
 <html>
-
+    <!-- staus page, renders sucess message -->
 
     <head>
-
         <title>Convert Media S3</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="/CSS/main.css">
-
     </head>
 
 
 
-    <body onload="loadData()">
-
+    <body>
+        <!-- Pageheader - nav menu -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">            
             <a class="navbar-brand" href="/">
                 <img src="/favicon.ico" width="30" height="30" class="d-inline-block align-top" alt="">
@@ -31,7 +29,6 @@
               </ul>
         </nav>
           
-
         <div class="container">
             <div class="jumbotron mt-4">
                 <div class="mx-auto" style="width: 20rem;">
@@ -45,26 +42,19 @@
             </div>
 
             <div class="row">
-
                 <div class="col-sm-2" ></div>
-
                 <div class="col-sm-4 mb-3">
                     <h2>Further steps:</h2>
                     <p> The converted file can be downloaded on the files page.
                     </p>
                 </div>
-
                 <div class="col-sm-4">
-
-
                 </div>
                 </div>
-
                 <div class="col-sm-2" ></div>
             </div>
 
             <!-- Bootstrap scripts -->
-
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
